--- a/index.html
+++ b/index.html
@@ -26,37 +26,38 @@
     <!--Navbar-->
     <div class="container bg-danger ">
         <div class="row navbar navbar-expand d-flex justify-content-between align-items-center bg-info " height="">
-            <div class="col">
+            <div class="col btn-group ">
                 <a class="navbar-brand" href="javascript:void(0)" title="Trade Me - Life lives here">
                     <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" width="150px">
                 </a>
-                <button class="btn btn-secondary btn-sm dropdown-toggle d-none d-md-inline d-print-block " type="button"
+                <button class="btn btn-light  dropdown-toggle d-none d-md-inline " type="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Browse
                 </button>
             </div>
-            <div class="col navbar-nav ">
-                <div class="nav-item">
-                    <span class="ml-2"></span>
-                    <button>
+
+            <div class="col navbar-nav mx-1 ">
+                <div class="nav-item  ">
+                    <span class="ml-2 "></span>
+                    <button class="btn btn-link-info">
                         <i class="fa-sharp fa-solid fa-binoculars fa-rotate-180"></i> WatchList
                     </button>
                 </div>
-                <div class="nav-item d-none d-md-block">
+                <div class="nav-item d-none d-md-block ">
                     <span class="ml-2"></span>
-                    <button>
+                    <button class="btn ">
                         <i class="fa-regular fa-heart"></i> Favourites
                     </button>
                 </div>
                 <div class="nav-item d-none d-md-block ">
                     <span class="ml-2"></span>
-                    <button>
+                    <button class="btn ">
                         <i class="fa-solid fa-pen"></i>Start a listing
                     </button>
                 </div>
                 <div class="nav-item ">
                     <span class="ml-2"></span>
-                    <button>
+                    <button class="btn ">
                         My Trade Me <i class="fa-solid fa-user"></i>
                     </button>
                 </div>
