--- a/index.html
+++ b/index.html
@@ -24,40 +24,41 @@
 <body class=" layout-top-nav skin-green">
 
     <!--Navbar-->
-    <div class="container bg-danger ">
-        <div class="row navbar navbar-expand d-flex justify-content-between align-items-center bg-info " height="">
-            <div class="col btn-group ">
+    <div class="container-fluid ">
+        <div class="row navbar navbar-expand d-flex justify-content-around align-items-center "
+            style="font-size: 12px; color: #65605d;">
+            <div class="col ">
                 <a class="navbar-brand" href="javascript:void(0)" title="Trade Me - Life lives here">
                     <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" width="150px">
                 </a>
-                <button class="btn btn-light  dropdown-toggle d-none d-md-inline " type="button"
+                <button class="btn btn-light dropdown-toggle d-none d-md-inline " type="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Browse
                 </button>
             </div>
 
-            <div class="col navbar-nav mx-1 ">
-                <div class="nav-item  ">
+            <div class="col navbar-nav d-flex justify-content-end" style="color: #65605d;">
+                <div class="nav-item ">
                     <span class="ml-2 "></span>
-                    <button class="btn btn-link-info">
+                    <button class="btn btn-outline-danger shadow-none  ">
                         <i class="fa-sharp fa-solid fa-binoculars fa-rotate-180"></i> WatchList
                     </button>
                 </div>
                 <div class="nav-item d-none d-md-block ">
                     <span class="ml-2"></span>
-                    <button class="btn ">
+                    <button class="btn btn-outline-danger shadow-none">
                         <i class="fa-regular fa-heart"></i> Favourites
                     </button>
                 </div>
                 <div class="nav-item d-none d-md-block ">
-                    <span class="ml-2"></span>
-                    <button class="btn ">
+                    <span class="ml-2 "></span>
+                    <button class="btn btn-outline-danger shadow-none ">
                         <i class="fa-solid fa-pen"></i>Start a listing
                     </button>
                 </div>
                 <div class="nav-item ">
                     <span class="ml-2"></span>
-                    <button class="btn ">
+                    <button class="btn btn-outline-danger shadow-none ">
                         My Trade Me <i class="fa-solid fa-user"></i>
                     </button>
                 </div>
