--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
 
 <body class=" layout-top-nav skin-green">
 
-    <!--Navbar-->
+
     <div class="container-fluid ">
-        <div class="row navbar navbar-expand d-flex justify-content-around align-items-center "
-            style="font-size: 12px; color: #65605d;">
+
+        <!--Navbar-->
+
+        <div class="row navbar navbar-expand d-flex justify-content-around align-items-center bg-light">
             <div class="col ">
                 <a class="navbar-brand" href="javascript:void(0)" title="Trade Me - Life lives here">
                     <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" width="150px">
                 </a>
-                <button class="btn btn-light dropdown-toggle d-none d-md-inline " type="button"
+                <button class="btn btn-light shadow-none dropdown-toggle d-none d-md-inline " type="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Browse
                 </button>
             </div>
 
-            <div class="col navbar-nav d-flex justify-content-end" style="color: #65605d;">
+            <div class="col navbar-nav d-flex justify-content-end btn-group" style="color: #65605d;">
                 <div class="nav-item ">
                     <span class="ml-2 "></span>
                     <button class="btn btn-outline-danger shadow-none  ">
@@ -64,6 +66,20 @@
                 </div>
             </div>
         </div>
+        <!--END NAVBAR-->
+
+        <!--Search-->
+        <div class="row" style="background-color:#6610f2;">
+            <h1 class="my-4 text-white-50">KIA ORA! READY TO FIND YOUR NEW?</h1>
+            <div class="input-group my-3 w-50">
+                <input type="text" class="form-control" placeholder="&#xF002; Search all of Trade Me"
+                    style="font-family:Arial, FontAwesome" aria-label="Search">
+                <div class="input-group-btn  me-4">
+                    <button type="button" class="btn btn-primary shadow-lg" type="submit">Search</button>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
