--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--Navbar-->
 
         <div class="row navbar navbar-expand d-flex justify-content-around align-items-center bg-light">
-            <div class="col ">
+            <div class="col">
                 <a class="navbar-brand" href="javascript:void(0)" title="Trade Me - Life lives here">
                     <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" width="150px">
                 </a>
@@ -37,6 +37,79 @@
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Browse
                 </button>
+
+                <div class="container-fluid mt-1 dropdown-menu bg-light ">
+                    <div class="row mx-1 ">
+                        <h3>Browse Marketplace</h3>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Antiques &
+                                    collectables</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Art</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Baby gear</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Books</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Building &
+                                    renovation</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Business, farming &
+                                    industry</a></li>
+                        </ul>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Clothing & Fashion</a>
+                            </li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Computers</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Crafts</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Electronics &
+                                    photography</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Gaming</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Health & beauty</a>
+                            </li>
+                        </ul>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Home & living</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Jewellery &
+                                    watches</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Mobile phones</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Movies & TV</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Music &
+                                    instruments</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Pets & animals</a>
+                            </li>
+                        </ul>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Pottery & glass</a>
+                            </li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Sports</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Toys & models</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Travel, events &
+                                    activities</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Trade Me Stores</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <hr class="dropdown-divider">
+                    </div>
+                    <div class="row mx-2 my-1 fw-bolder d-none d-md-flex">
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-danger">Marketplace</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-warning">Jobs</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-secondary">Motors</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-success ">Porperty</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link text-dark">Services</a></li>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="col navbar-nav d-flex justify-content-end btn-group" style="color: #65605d;">
@@ -69,13 +142,15 @@
         <!--END NAVBAR-->
 
         <!--Search-->
-        <div class="row" style="background-color:#6610f2;">
-            <h1 class="my-4 text-white-50">KIA ORA! READY TO FIND YOUR NEW?</h1>
-            <div class="input-group my-3 w-50">
+        <div class="row " style="background-color:#6610f2;">
+            <h1 class="col-12 my-4 text-white-50 display-5">
+                <p><strong>KIA ORA! READY TO FIND YOUR NEW?</strong></p>
+            </h1>
+            <div class="col input-group my-3 ">
                 <input type="text" class="form-control" placeholder="&#xF002; Search all of Trade Me"
                     style="font-family:Arial, FontAwesome" aria-label="Search">
-                <div class="input-group-btn  me-4">
-                    <button type="button" class="btn btn-primary shadow-lg" type="submit">Search</button>
+                <div class="input-group-btn w-50 ">
+                    <button type="button" class="btn btn-primary shadow-none" type="submit">Search</button>
                 </div>
             </div>
         </div>
