--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy & Sell on NZ's #1 Auction & Classified Site |Trade Me</title>
     <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -113,25 +113,25 @@
             <div class="col navbar-nav d-flex justify-content-end btn-group">
                 <div class="nav-item ">
                     <span class="ml-2 "></span>
-                    <button class="btn btn-outline-danger shadow-none  ">
+                    <button class="btn btn-outline-primary shadow-none  ">
                         <i class="fa-sharp fa-solid fa-binoculars fa-rotate-180"></i> WatchList
                     </button>
                 </div>
                 <div class="nav-item d-none d-md-block ">
                     <span class="ml-2"></span>
-                    <button class="btn btn-outline-danger shadow-none">
+                    <button class="btn btn-outline-primary shadow-none">
                         <i class="fa-regular fa-heart"></i> Favourites
                     </button>
                 </div>
                 <div class="nav-item d-none d-md-block ">
                     <span class="ml-2 "></span>
-                    <button class="btn btn-outline-danger shadow-none ">
+                    <button class="btn btn-outline-primary shadow-none ">
                         <i class="fa-solid fa-pen"></i>Start a listing
                     </button>
                 </div>
                 <div class="nav-item ">
                     <span class="ml-2"></span>
-                    <button class="btn btn-outline-danger shadow-none ">
+                    <button class="btn btn-outline-primary shadow-none ">
                         My Trade Me <i class="fa-solid fa-user"></i>
                     </button>
                 </div>
@@ -153,31 +153,54 @@
                 </div>
             </div>
         </div>
-        <div class="row row-cols-2 row-cols-md-6 
-            gy-2 gx-2 bg-light justify-content-center btn-group-lg">
-            <button type="button" class="col btn btn-danger">Market</button>
-            <button type="button" class="col btn btn-warning">Jobs</button>
-            <button type="button" class="col btn btn-secondary">Motors</button>
-            <button type="button" class="col btn btn-success">Porperty</button>
-            <button type="button" class="col btn btn-dark">Services</button>
-            <button class="btn btn-link shadow-none d-md-none border " type="button" data-bs-toggle="dropdown"
-                aria-expanded="false" data-bs-offset="10,20">
-                Browse
-            </button>
+
+        <div class="row position-relative">
+            <div class="btn-group btn-group-lg d-none d-md-flex position-absolute top-0 start-50 translate-middle w-100 "
+                role="group">
+                <button type="button" class="btn btn-danger">Market</button>
+                <button type="button" class="btn btn-warning">Jobs</button>
+                <button type="button" class="btn btn-secondary">Motors</button>
+                <button type="button" class="btn btn-success">Porperty</button>
+                <button type="button" class="btn btn-dark">Services</button>
+            </div>
+
+            <div class="row row-cols-2 mx-1 g-1 d-md-none position-absolute top-0 start-0 ">
+                <div class="col">
+                    <div class="p-3 border bg-light text-danger"><span class="me-1"><i
+                                class="fa-solid fa-bag-shopping"></i></span>
+                        Market</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-warning"><span class="me-1"><i
+                                class="fa-sharp fa-solid fa-briefcase"></i></span> Jobs</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-secondary"><span class="me-1"><i
+                                class="fa-solid fa-car-side"></i></span>Motors</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-success"><span class="me-1"><i
+                                class="fa-sharp fa-solid fa-house"></i></span>Porperty</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-dark"><span class="me-1"><i
+                                class="fa-sharp fa-solid fa-screwdriver-wrench"></i></span>Services</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light link-primary text-decoration-underline ">Browse</div>
+                </div>
+            </div>
         </div>
     </div>
 
-
-
     <!--Bootstrap version v5.0.2-->
-    <script src="jquery/jQuery-2.6.2.min.js"></script>
-    <script src="jquery/popper.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/html" src="./jquery/jQuery-2.6.2.min.js"></script>
+    <script type="text/javascript" src="./jquery/popper.min.js"></script>
+    <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
 
     <!--script parents-->
     <!-- <script src="app.js"></script> -->
-</body>
-</script>
+
 </body>
 
 </html>
