--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
     <!--Navbar-->
     <header class="header">
         <nav class="navbar navbar-expand-lg header-nav fixed-top navbar-light bg-light ">
-            <div class="container">
-                <div class="row">
-                    <div class="col position-relative">
+            <div class="container-fluid">
+                <div class="row navbar navbar-expand-lg header-nav fixed-top navbar-light bg-light">
+                    <div class="col">
                         <a class="navbar-brand" href="#" title="Trade Me- Life lives here">
-                            <img src="/assets/image/output-onlinepngtools.png"
-                                class="position-absolute top-50 start-0 translate-middle-y mx-auto " alt="Bootstrap">
+                            <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid " alt="Bootstrap">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -61,9 +60,9 @@
     </header>
 
     <!--Bootstrap version v5.0.2-->
-    <script src="jquery/jQuery-3.6.3.min.js"></script>
-    <script src="jquery/popper.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/html" src="jquery/jQuery-3.6.3.min.js"></script>
+    <script type="text/javascript" src="jquery/popper.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
     <!--script xu ly-->
     <script src="app.js"></script>
