create new branch

--- a/index.html
+++ b/index.html
@@ -5,69 +5,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nav bar</title>
+    <title>Buy & Sell on NZ's javascript:void(0)1 Auction & Classified Site |Trade Me</title>
     <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <!--Style Css-->
     <link rel="stylesheet" href="style.css">
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <!-- spec compliant (includes chorme)-->
-    <!-- <meta name="mobile-web-app-capable" content="yes">
-    <link rel="shortcut icon" href="/a/favicon.ico?2018-07" type="image/x-icon">
-    <link rel="icon" sizes="192x192" href="/assets/image/">
-    <meta name="theme-color" content="#f6f5f4"> -->
-
+    <!--icon browse tab-->
+    <link rel="shortcut icon" href="./assets/image/icon_Browser.webp">
 </head>
 
 <body>
-
-    <!--Navbar-->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg header-nav fixed-top navbar-light bg-light ">
-            <div class="container-fluid">
-                <div class="row navbar navbar-expand-lg header-nav fixed-top navbar-light bg-light">
-                    <div class="col">
-                        <a class="navbar-brand" href="#" title="Trade Me- Life lives here">
-                            <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid " alt="Bootstrap">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </button>
-                    </div>
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <div class="row ">
+                <div class="col-auto">
+                    <a class="navbar-brand" href="" title="Trade Me- Life lives here">
+                        <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" alt="Bootstrap">
+                    </a>
+                    <!-- <button class="btn btn-light shadow-none dropdown-toggle d-none d-md-inline " type="button"
+                        data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
+                        Browse
+                    </button> -->
                 </div>
-                <div class="col position-relative">
-                    <div class="collapse navbar-collapse justify-content-end mx-auto position-absolute top-50 end-0 translate-middle-y"
-                        id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item d">
-                                <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
-                            </li>
-                        </ul>
-                    </div>
+                <div class="col-auto text-center">
+                    <ul class="navbar-nav ms-auto ">
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)"><i
+                                    class="fa-sharp fa-solid fa-binoculars fa-rotate-180"></i>
+                                <span>WatchList</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)"><i class="fa-regular fa-heart"></i>
+                                <span>Favourites</span>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)"><i class="fa-solid fa-pen"></i>
+                                <span>Start a listing</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)"><span>My Trade Me</span>
+                                <i class="fa-solid fa-user"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+
 
     <!--Bootstrap version v5.0.2-->
     <script type="text/html" src="jquery/jQuery-3.6.3.min.js"></script>
     <script type="text/javascript" src="jquery/popper.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
-    <!--script xu ly-->
-    <script src="app.js"></script>
-</body>
-</script>
+    <!-- script xu ly
+    <script src="app.js"></script> -->
 </body>
 
 </html>
